[project]
name = "stratus-sdk"
version = "0.0.1"
authors = [
  { name="stratus-team", email="clunaemail@gmail.com" },
]
description = "Python SDK for Stratus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/stratus-team/sdk-python"
Issues = "https://github.com/stratus-team/sdk-python/issues"
